# grootevent

grootevent/: AUTHORS  BUGS  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac  grootevent-example.xml
grootevent/dtd/: Makefile.am  grootevent.cat  grootevent.dtd
grootevent/patches/: root_buttonpress_metacity-2.4.55.patch
grootevent/src/: Makefile.am  callbacks.c  callbacks.h  grootevent.c  grootevent.h  parser.c  parser.h  shellcmd.c  shellcmd.h
